# flysogn

./: .dockerignore  .gitignore  Dockerfile  Procfile  README.md  app.py  app.yaml  collect_ogn.py  cronjob.sh  db_utils.py  ecowitt_net_get.py  flysogn.py  geoloc.py  meps.py  meps_utils.py  met_basis.py  nve_utils.py  push_to_windy.py  pyproject.toml  requirements.txt  test_folium.py  utils.py  utils_metno.py  vestavind.py
.devcontainer/: devcontainer.json
.github/workflows/: get_data.yml
