[tool.poetry]
package-mode = false

[project]
name = "flysogn"
version = "0.1.0"
description = ""
authors = [
    {name = "simen",email = "simeneide@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bottleneck>=1.4.2",
    "folium>=0.19.4",
    "geopandas==0.12.2",
    "google-cloud-storage>=3.0.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "metar>=1.8.0",
    "numpy>=2.2.2",
    "ogn-client>=1.2.1",
    "pandas>=1.1.3",
    "plotly>=4.12.0",
    "psycopg2>=2.9.10",
    "python-dateutil>=2.8.1",
    "requests>=2.24.0",
    "scipy>=1.15.1",
    "siphon>=0.10.0",
    "streamlit-folium>=0.24.0",
    "streamlit-geolocation>=0.0.10",
    "streamlit>=1.35.0",
    "windrose>=1.9.2",
    "xarray>=2025.1.2",
]
